# flask-extra-info

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-publish.yml
flask_xtra_info/: __init__.py
