[tool.poetry]
name = "flask-xtra-info"
version = "0.3.9"
description = "Flask extension to add info to headers/logs"
authors = ["jthop <jh@mode14.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
